content/docs/v1.3/configuration/triggers/http/index.mdx
---
title: "Http"
description: "The http trigger lets you send container update notifications via HTTP."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

The `http` trigger lets you send container update notifications via HTTP.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| ------------------------------------------------- | :--------------: | --------------------------------------------------- | ------------------------------ | ---------------------------- |
| `DD_TRIGGER_HTTP_{trigger_name}_URL` | 🔴 | The URL of the webhook | Valid http or https endpoint | |
| `DD_TRIGGER_HTTP_{trigger_name}_METHOD` | ⚪ | The HTTP method to use | `GET`, `POST` | `POST` |
| `DD_TRIGGER_HTTP_{trigger_name}_AUTH_TYPE` | ⚪ | The Auth type (among ) | `BASIC`, `BEARER` | `BASIC` |
| `DD_TRIGGER_HTTP_{trigger_name}_AUTH_USER` | ⚪ | The Auth user if BASIC Auth is enabled | | |
| `DD_TRIGGER_HTTP_{trigger_name}_AUTH_PASSWORD` | ⚪ | The Auth user password if `BASIC` Auth is enabled | | |
| `DD_TRIGGER_HTTP_{trigger_name}_AUTH_BEARER` | ⚪ | The Auth bearer token if `BEARER` Auth is enabled | | |
| `DD_TRIGGER_HTTP_{trigger_name}_PROXY` | ⚪ | The HTTP Proxy | | |

<Callout type="info">This trigger also supports the [common configuration variables](/docs/configuration/triggers/#common-trigger-configuration).</Callout>

### Examples

#### Post an HTTP request to an existing server

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ...
    environment:
      - DD_TRIGGER_HTTP_MYREMOTEHOST_URL=https://my-remote-host/new-version
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e DD_TRIGGER_HTTP_MYREMOTEHOST_URL="https://my-remote-host/new-version" \
  ...
  codeswhat/drydock
```
</Tab>
</Tabs>

#### Example of payload (POST request)

```json
{
  "id":"31a61a8305ef1fc9a71fa4f20a68d7ec88b28e32303bbc4a5f192e851165b816",
  "name":"homeassistant",
  "watcher":"local",
  "includeTags":"^\\d+\\.\\d+.\\d+$",
  "image":{
    "id":"sha256:d4a6fafb7d4da37495e5c9be3242590be24a87d7edcc4f79761098889c54fca6",
    "registry":{
      "url":"123456789.dkr.ecr.eu-west-1.amazonaws.com"
    },
    "name":"test",
    "tag":{
      "value":"2021.6.4",
      "semver":true
    },
    "digest":{
      "watch":false,
      "repo":"sha256:ca0edc3fb0b4647963629bdfccbb3ccfa352184b45a9b4145832000c2878dd72"
    },
    "architecture":"amd64",
    "os":"linux",
    "created":"2021-06-12T05:33:38.440Z"
  },
  "result":{
    "tag":"2021.6.5"
  },
  "updateAvailable": true
}
```
